@@ -1,6 +1,6 @@
 #!/bin/sh
 # -*- coding: utf-8 -*-
-# Copyright (C) 2014, 2015 Laboratoire de Recherche et Développement de
+# Copyright (C) 2014, 2015, 2020 Laboratoire de Recherche et Développement de
 # l'Epita (LRDE).
 #
 # This file is part of Spot, a model checking library.
@@ -109,3 +109,9 @@ run 0 autfilt aut3 --are-isomorphic aut4
 
 run 0 autfilt -u aut1 aut2 aut2 aut3 -c >out
 test 2 = "`cat out`"
+
+ltl2tgba -D -G GFa > aut1
+ltl2tgba -D -G FGa > aut2
+test 0 = `autfilt -c --are-isomorphic aut1 aut2`
+test 2 = `ltl2tgba -D -G 'GFa' 'FG!a' | autfilt -u -c`
+test 1 = `ltl2tgba -D -G 'GFa' 'GFa' | autfilt -u -c`
